# gcaops

./: LICENSE  README.md  setup.cfg  tox.ini
gcaops/: all.py
gcaops/algebra/: all.py  differential_polynomial_ring.py  differential_polynomial_solver.py  homogeneous_polynomial_poisson_complex.py  polydifferential_operator.py  r_matrix_poisson.py  superfunction_algebra.py  superfunction_algebra_operation.py  tensor_product.py
gcaops/graph/: all.py  directed_graph.py  directed_graph_basis.py  directed_graph_complex.py  directed_graph_operad.py  directed_graph_vector.py  formality_graph.py  formality_graph_basis.py  formality_graph_complex.py  formality_graph_operad.py  formality_graph_operator.py  formality_graph_vector.py  graph_basis.py  graph_cache.py  graph_complex.py  graph_file.py  graph_vector.py  graph_vector_dict.py  graph_vector_vector.py  leibniz_graph_expansion.py  undirected_graph.py  undirected_graph_basis.py  undirected_graph_complex.py  undirected_graph_operad.py  undirected_graph_vector.py
gcaops/util/: directed_graph_sage.py  formality_graph_sage.py  jet_variables.py  undirected_graph_sage.py
