[metadata]
name = gcaops
version = 0.1.dev
author = Ricardo Buring
author_email = ricardo.buring@gmail.com
description = Python package implementing the action of Kontsevich's graph complex(es) on Poisson structures
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rburing/gcaops
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Mathematics

[options]
packages = find:
python_requires = >= 3
install_requires =
